添加服务器查看当前在线用户和私聊功能

--- a/chat_client/chat_client.vcxproj
+++ b/chat_client/chat_client.vcxproj
@@ -129,6 +129,8 @@
   <ItemGroup>
     <ClCompile Include="chat_client.cpp" />
     <ClCompile Include="chat_Main.cpp" />
+    <ClCompile Include="CommandHandler.cpp" />
+    <ClCompile Include="CommandHandler.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chat_client.hpp" />
