--- a/chat_client/chat_client.vcxproj.filters
+++ b/chat_client/chat_client.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClCompile Include="chat_Main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="CommandHandler.hpp">
+      <Filter>头文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CommandHandler.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chat_client.hpp">
