重构用户数据存储，重写客户端连接处理函数

--- a/chat_server/chat_server.vcxproj
+++ b/chat_server/chat_server.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClInclude Include="chat_server.hpp" />
     <ClInclude Include="CommandHandler.hpp" />
+    <ClInclude Include="user.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="chatMain.cpp" />
